--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   },
   "devDependencies": {
     "@types/electron-devtools-installer": "2.2.0",
+    "@types/react": "^17.0.37",
     "@typescript-eslint/eslint-plugin": "5.7.0",
+    "@vitejs/plugin-react": "^1.1.3",
     "@vitejs/plugin-vue": "2.0.1",
     "cross-env": "7.0.3",
     "dts-for-context-bridge": "0.7.0",
@@ -40,6 +42,8 @@
   },
   "dependencies": {
     "electron-updater": "4.6.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "vue": "3.2.26",
     "vue-router": "4.0.12"
   }
