--- a/package.json
+++ b/package.json
@@ -21,30 +21,15 @@
     "pretypecheck-renderer": "dts-cb -i packages/preload/src/**/*.ts -o packages/preload/exposedInMainWorld.d.ts"
   },
   "devDependencies": {
-    "@types/electron-devtools-installer": "2.2.0",
     "@types/react": "^17.0.37",
     "@typescript-eslint/eslint-plugin": "5.7.0",
     "@vitejs/plugin-react": "^1.1.3",
-    "@vitejs/plugin-vue": "2.0.1",
-    "cross-env": "7.0.3",
-    "dts-for-context-bridge": "0.7.0",
-    "electron": "16.0.5",
-    "electron-builder": "22.14.5",
-    "electron-devtools-installer": "3.2.0",
     "eslint": "8.4.1",
-    "eslint-plugin-vue": "8.2.0",
-    "nano-staged": "0.5.0",
-    "playwright": "1.17.1",
-    "simple-git-hooks": "2.7.0",
     "typescript": "4.5.4",
-    "vite": "2.7.3",
-    "vue-tsc": "0.29.8"
+    "vite": "2.7.3"
   },
   "dependencies": {
-    "electron-updater": "4.6.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "vue": "3.2.26",
-    "vue-router": "4.0.12"
+    "react-dom": "^17.0.2"
   }
 }
